minor style changes to show view - exercise completed

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -14,4 +14,6 @@
 #main-content-edit,
 #main-content-create {
     width: calc(100vw - 300px);
+    height: calc(100vh - 67.59px);
+    overflow-y: auto;
 }
